# doc_intelligence_api_v2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MULTI_TENANCY_EVALUATION.md  README.md  api-types.ts  cloudbuild.yaml  cors-update.env  deploy.sh  development-env.yaml  pyproject.toml  setup_gcp_bucket.py
app/: main.py
app/api/: health.py
app/api/v1/: audit.py  audit_context.py  auth.py  debug.py  documents_main.py  folders.py  organizations.py  password.py  users.py
app/api/v1/auth/: __init__.py  invitations.py  login.py  organizations.py  tokens.py
app/api/v1/documents_modules/: __init__.py  common.py  document_download.py  document_management.py  document_upload.py
app/core/: cache.py  config.py  db_client.py  exceptions.py  gcs_client.py  logging.py  middleware.py  openapi.py  security.py  simple_auth.py
app/core/security/: __init__.py  dependencies.py  password.py  tokens.py
app/models/: document.py  folder.py  organization.py  user.py
app/models/schemas/: __init__.py  auth.py  base.py  document.py  errors.py  folder.py  organization.py  stats.py  user.py  validators.py
app/services/: audit_service.py  auth_service.py  document_service.py  folder_service.py  org_service.py  usage_enforcement.py  user_service.py
app/services/document/: __init__.py  document_base_service.py  document_crud_service.py  document_download_service.py  document_query_service.py  document_service.py  document_storage_service.py  document_validation_service.py
app/utils/: validators.py
scripts/: generate_client.py  generate_env.py  init_database.py  provision_all.py  provision_config.yaml  setup_cloud_sql.py  setup_secrets.py  setup_service_account.py
scripts/gcp/: rollback.sh  setup_triggers.sh
tests/: __init__.py  conftest.py
tests/fixtures/sample_files/: .gitkeep
tests/integration/api/: test_auth.py  test_health.py  test_users.py
tests/integration/workflows/: test_auth_workflow.py
tests/unit/core/: test_config.py  test_db_models.py  test_security.py
tests/unit/services/: test_audit_service.py  test_document_service.py  test_user_service.py
